--- a/angular-zorro-free/src/account/account.component.html
+++ b/angular-zorro-free/src/account/account.component.html
@@ -26,7 +26,7 @@
   <router-outlet></router-outlet>
 
   <br>
-  <account-languages></account-languages>
+  <!-- <account-languages></account-languages> -->
 
   <global-footer [links]="links">
     Copyright
