--- a/angular-zorro-free/src/app/layout/default/header/header.component.html
+++ b/angular-zorro-free/src/app/layout/default/header/header.component.html
@@ -6,23 +6,14 @@
         <i nz-icon type="menu-{{settings.layout.collapsed ? 'unfold' : 'fold'}}"></i>
       </div>
     </li>
-    <!-- Github Page -->
-    <li>
-      <a class="alain-default__nav-item" href="https://github.com/52ABP/LTMCompanyNameFree.YoyoCmsTemplate" target="_blank">
-        <i nz-icon type="github"></i>
-      </a>
-    </li>
-    <!-- 52abp官网 -->
-    <li class="hidden-mobile">
-      <div class="alain-default__nav-item" href="https://www.52abp.com">
-        <i nz-icon type="link"></i>
-      </div>
-    </li>
   </ul>
   <ul class="alain-default__nav">
-    <li class="hidden-mobile">
-      <header-i18n></header-i18n>
-    </li>
+
+    <!-- <li class="hidden-mobile">
+        //修改多语言选择
+      <header-i18n></header-i18n> 
+    </li> -->
+
     <!-- Settings -->
     <li class="hidden-mobile">
       <nz-dropdown nzTrigger="click" nzPlacement="bottomRight">
